// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatetimePicker component should display a placeholder when there's no data 1`] = `
<DateRangePicker
  initialSettings={
    Object {
      "alwaysShowCalendars": true,
      "applyButtonClasses": "btn-success mr-2",
      "cancelButtonClasses": "btn-secondary",
      "endDate": "2021-03-08T21:46:40.000Z",
      "opens": "left",
      "showCustomRangeLabel": false,
      "singleDatePicker": true,
      "startDate": "2021-03-08T21:46:40.000Z",
      "timePicker": true,
    }
  }
  onApply={[Function]}
>
  <div>
    <Input
      placeholder="Choose a date..."
      type="text"
      value=""
    />
  </div>
</DateRangePicker>
`;

exports[`DatetimePicker component should display the passed data 1`] = `
<DateRangePicker
  initialSettings={
    Object {
      "alwaysShowCalendars": true,
      "applyButtonClasses": "btn-success mr-2",
      "cancelButtonClasses": "btn-secondary",
      "endDate": "2012-03-21T08:32:12.045Z",
      "opens": "left",
      "showCustomRangeLabel": false,
      "singleDatePicker": true,
      "startDate": "2012-03-21T08:32:12.045Z",
      "timePicker": true,
    }
  }
  onApply={[Function]}
>
  <div>
    <Input
      placeholder="Choose a date..."
      type="text"
      value="03/21/2012 1:32 AM"
    />
  </div>
</DateRangePicker>
`;

exports[`DatetimePicker component should ignore invalid passed data 1`] = `
<DateRangePicker
  initialSettings={
    Object {
      "alwaysShowCalendars": true,
      "applyButtonClasses": "btn-success mr-2",
      "cancelButtonClasses": "btn-secondary",
      "endDate": "2021-03-08T21:46:40.000Z",
      "opens": "left",
      "showCustomRangeLabel": false,
      "singleDatePicker": true,
      "startDate": "2021-03-08T21:46:40.000Z",
      "timePicker": true,
    }
  }
  onApply={[Function]}
>
  <div>
    <Input
      placeholder="Choose a date..."
      type="text"
      value=""
    />
  </div>
</DateRangePicker>
`;
